[package]
name = "visage"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13.1"
blockhash = "1.0.0"
chromiumoxide = "0.7.0"
futures = "0.3.31"
image = "0.25.6"
md5 = "0.7.0"
nix = { version = "0.30.0", features = ["signal"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
tokio = { version = "1.44.2", features = ["full"] }
walkdir = "2.5.0"
